// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package feedwire;

option optimize_for = LITE_RUNTIME;

message Version {
  enum Architecture {
    UNKNOWN_ARCHITECTURE = 0;
    ARM = 1;
    ARM64 = 2;
    MIPS = 3;
    MIPS64 = 4;
    X86 = 5;
    X86_64 = 6;
  }
  enum BuildType {
    UNKNOWN_BUILD_TYPE = 0;
    DEV = 1;
    ALPHA = 2;
    BETA = 3;
    RELEASE = 4;
  }
  optional int32 major = 1;
  optional int32 minor = 2;
  optional int32 build = 3;
  optional int32 revision = 4;
  optional Architecture architecture = 5;
  optional BuildType build_type = 6;
  optional int32 api_version = 7;
}
